--- a/style.css
+++ b/style.css
@@ -1,33 +1,40 @@
-*{
+* {
     margin: 0;
     padding: 0;
 }
 
-body{
+body {
     background-image: url(/ㅈ같이\ 생긴\ 보노보노.webp);
     background-repeat: no-repeat;
     background-size: 100%;
+    width: 100%;
+    height: 100%;
 }
 
-a{
+html {
+    width: 100%;
+    height: 100%;
+}
+
+a {
     color: white;
     font-size: 20px;
     font-weight: 900;
     text-decoration: none;
 }
 
-p{
+p {
     font-size: 20px;
     font-weight: 900;
     color: white;
 }
 
-#container{
+#container {
     text-align: center;
     margin-top: 200px;
 }
 
-form>input{
+form>input {
     width: 500px;
     height: 50px;
     margin-top: 10px;
@@ -35,7 +42,7 @@ form>input{
     border-radius: 10px;
 }
 
-button{
+button {
     width: 100px;
     height: 40px;
     font-size: 20px;
@@ -43,43 +50,94 @@ button{
     border-radius: 10px;
 }
 
-#radioDiv{
+#radioDiv {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-#background{
-    background-image: linear-gradient(to right, red, orange, yellow, green, blue, indigo, purple);
+#background {
+    background-image: linear-gradient(180deg, red, orange, yellow, green, blue, navy, purple);
     margin-left: 400px;
     margin-right: 400px;
     border-radius: 20px;
-    padding: 10px;
+    padding: 5px;
     border: solid black 3px;
 }
 
-#container2{
-    text-align: center;
-    margin-top: 50px;
+#content {
+    background-image: url(/ㅈ같이\ 생긴\ 무지개\ 배경.gif);
+    background-size: 10%;
+    color: white;
 }
 
-#container2>h1{
+#container2 {
+    text-align: center;
+}
+
+#container2>h1 {
     background-image: linear-gradient(180deg, red, orange, yellow, green, blue, navy, purple);
     -webkit-background-clip: text;
     color: transparent;
-    font-size: 80px;
+    font-size: 70px;
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: black;
 }
 
-#postBt{
+#postBt {
     margin-top: 30px;
     margin-bottom: 30px;
     cursor: pointer;
 }
 
-textarea{
+textarea {
     resize: none;
     margin-top: 20px;
     font-size: 20px;
+}
+
+header {
+    background-image: url(/ㅈ같이\ 생긴\ 무지개\ 헤더\ 배경.gif);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    display: flex;
+    justify-content: space-around;
+    height: 80px;
+    line-height: 70px;
+    border-bottom: solid black 2px;
+}
+
+span>a {
+    background-image: linear-gradient(90deg, red, orange, yellow, green, blue, navy, purple);
+    -webkit-background-clip: text;
+    color: transparent;
+    margin-left: 10px;
+    font-size: 30px;
+    font-weight: 900;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
+}
+
+li {
+    list-style: none;
+    padding: 5px 10px;
+    float: left;
+}
+
+li>a {
+    background-image: linear-gradient(90deg, red, orange, yellow, green, blue, navy, purple);
+    -webkit-background-clip: text;
+    color: transparent;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
+}
+
+#left {
+    width: 50%;
+}
+
+#right {
+    width: 50%;
+    margin-left: 1500px;
+    color: black;
 }
