--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ body {
     height: 100%;
 }
 
+body::-webkit-scrollbar {
+    display: none;
+}
+
 html {
     width: 100%;
     height: 100%;
@@ -106,6 +110,9 @@ header {
     height: 80px;
     line-height: 70px;
     border-bottom: solid black 2px;
+    position: fixed;
+    top: 0px;
+    width: 100%;
 }
 
 span>a {
@@ -151,11 +158,12 @@ li>a {
 }
 
 #left {
+    width: 900px;
     display: flex;
 }
 
 #right {
-    margin-left: 1500px;
+    margin-left: 700px;
     color: black;
 }
 
