--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ header {
     height: 80px;
     line-height: 70px;
     border-bottom: solid black 2px;
-    position: fixed;
+    /* position: fixed; */
     top: 0px;
     width: 100%;
 }
